--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -11,3 +11,18 @@
 .blue {
     background-image: linear-gradient(135deg, #2e15ce, #8B7DFF);
 }
+
+.layer {
+    border: 1px solid #09a77d;
+}
+
+.layer:hover {
+    background-color: #B3EEDB;
+}
+
+.yellow {
+    background-image: url(/Image/bitcoin.jpeg);
+    background-size: cover;
+    background-position: center;
+    height: 200px; 
+}
