--- a/css/output.css
+++ b/css/output.css
@@ -820,11 +820,6 @@ video {
   margin-bottom: auto;
 }
 
-.my-\[\] {
-  margin-top: ;
-  margin-bottom: ;
-}
-
 .mb-\[20px\] {
   margin-bottom: 20px;
 }
@@ -1056,10 +1051,6 @@ video {
   height: 720px;
 }
 
-.h-\[80\%\] {
-  height: 80%;
-}
-
 .h-\[85\%\] {
   height: 85%;
 }
@@ -1076,24 +1067,8 @@ video {
   height: 100%;
 }
 
-.h-\[\] {
-  height: ;
-}
-
-.h-\[4\] {
-  height: 4;
-}
-
-.h-\[45vh\] {
-  height: 45vh;
-}
-
-.h-\[60vh\] {
-  height: 60vh;
-}
-
-.h-\[70vh\] {
-  height: 70vh;
+.h-\[270px\] {
+  height: 270px;
 }
 
 .w-10 {
@@ -1614,16 +1589,16 @@ video {
   grid-auto-flow: column dense;
 }
 
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-
-.grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .grid-rows-1 {
@@ -1818,16 +1793,16 @@ video {
   justify-items: stretch;
 }
 
-.gap-1 {
-  gap: 0.25rem;
-}
-
 .gap-11 {
   gap: 2.75rem;
 }
 
 .gap-2 {
   gap: 0.5rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
 }
 
 .gap-4 {
@@ -1920,6 +1895,10 @@ video {
 
 .gap-\[8px\] {
   gap: 8px;
+}
+
+.gap-\[\] {
+  gap: ;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -2250,6 +2229,10 @@ video {
   border-radius: 15px;
 }
 
+.rounded-\[30px\] {
+  border-radius: 30px;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -2374,6 +2357,10 @@ video {
 
 .border {
   border-width: 1px;
+}
+
+.border-2 {
+  border-width: 2px;
 }
 
 .border-x {
@@ -2952,6 +2939,11 @@ video {
   padding-bottom: 5rem;
 }
 
+.py-\[60px\] {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
 .py-\[6rem\] {
   padding-top: 6rem;
   padding-bottom: 6rem;
@@ -2985,6 +2977,10 @@ video {
 
 .pl-\[15px\] {
   padding-left: 15px;
+}
+
+.pl-\[20px\] {
+  padding-left: 20px;
 }
 
 .pr-\[20px\] {
@@ -3948,6 +3944,11 @@ video {
     line-height: 1.75rem;
   }
 
+  .sm\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
   .sm\:font-bold {
     font-weight: 700;
   }
@@ -4002,6 +4003,10 @@ video {
     margin-bottom: 80px;
   }
 
+  .md\:mt-3 {
+    margin-top: 0.75rem;
+  }
+
   .md\:mt-6 {
     margin-top: 1.5rem;
   }
@@ -4034,6 +4039,10 @@ video {
     height: 270px;
   }
 
+  .md\:h-\[30\%\] {
+    height: 30%;
+  }
+
   .md\:h-\[300px\] {
     height: 300px;
   }
@@ -4060,6 +4069,10 @@ video {
 
   .md\:w-\[100\%\] {
     width: 100%;
+  }
+
+  .md\:w-\[20\%\] {
+    width: 20%;
   }
 
   .md\:w-\[25\%\] {
@@ -4150,12 +4163,20 @@ video {
     gap: 2.5rem;
   }
 
-  .md\:gap-3 {
-    gap: 0.75rem;
+  .md\:gap-6 {
+    gap: 1.5rem;
+  }
+
+  .md\:gap-\[100px\] {
+    gap: 100px;
   }
 
   .md\:gap-\[10px\] {
     gap: 10px;
+  }
+
+  .md\:gap-\[140px\] {
+    gap: 140px;
   }
 
   .md\:gap-\[200px\] {
@@ -4172,6 +4193,10 @@ video {
 
   .md\:gap-\[70px\] {
     gap: 70px;
+  }
+
+  .md\:gap-\[150px\] {
+    gap: 150px;
   }
 
   .md\:border-none {
@@ -4210,12 +4235,21 @@ video {
     padding-bottom: 3rem;
   }
 
+  .md\:pl-\[0px\] {
+    padding-left: 0px;
+  }
+
   .md\:text-left {
     text-align: left;
   }
 
   .md\:text-center {
     text-align: center;
+  }
+
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .md\:text-3xl {
@@ -4264,6 +4298,10 @@ video {
 
   .md\:font-semibold {
     font-weight: 600;
+  }
+
+  .md\:leading-\[46px\] {
+    line-height: 46px;
   }
 
   .md\:leading-\[76px\] {
@@ -4358,6 +4396,10 @@ video {
     width: 100%;
   }
 
+  .lg\:w-\[\] {
+    width: ;
+  }
+
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
@@ -4366,12 +4408,12 @@ video {
     flex-direction: row;
   }
 
-  .lg\:items-center {
-    align-items: center;
+  .lg\:flex-col {
+    flex-direction: column;
   }
 
-  .lg\:gap-11 {
-    gap: 2.75rem;
+  .lg\:items-center {
+    align-items: center;
   }
 
   .lg\:gap-\[400px\] {
@@ -4416,6 +4458,10 @@ video {
     text-align: left;
   }
 
+  .lg\:text-center {
+    text-align: center;
+  }
+
   .lg\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -4429,6 +4475,10 @@ video {
   .lg\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
+  }
+
+  .lg\:text-\[40px\] {
+    font-size: 40px;
   }
 
   .lg\:text-lg {
